--- a/src/scss/maps/_units.scss
+++ b/src/scss/maps/_units.scss
@@ -1,19 +1,58 @@
 @use "modularscale-sass/stylesheets/_modularscale.scss" as *;
+@use "../helpers/makeshadow" as helper;
 @use "sass:math";
-$base-font-size:16px;
+$base-font-size: 16px;
 $basicSizeMultiplier: 1rem;
-$global-border-radius: math.div(1rem,3) !default;
+$global-border-radius: math.div(1rem, 3) !default;
 $global-border-round: 1rem !default;
 
 $units: (
-    breakpoints: (
-        xsm: 0,
-        sm: 480px,
-        md: 768px,
-        lg: 1024px,
-        xl: 1200px,
-        xxl: 1440px,
-    ),
+	states: (
+		a:active,
+		h:hover
+	),
+	direction-edges: (
+		t: (
+			logical: block-start,
+			fallback: top,
+		),
+		l: (
+			logical: inline-start,
+			fallback: left,
+		),
+		r: (
+			logical: inline-end,
+			fallback: right,
+		),
+		b: (
+			logical: block-start,
+			fallback: bottom,
+		),
+	),
+	direction-corners: (
+		tl: (
+			logical: start-start,
+			fallback: top-left,
+		),
+		tr: (
+			logical: end-start,
+			fallback: top-right,
+		),
+		bl: (
+			logical: start-end,
+			fallback: bottom-left,
+		),
+		br: (
+			logical: end-end,
+			fallback: bottom-right,
+		),
+	),
+	breakpoints: (
+		sm: 480px,
+		md: 768px,
+		lg: 1024px,
+		xl: 1200px,
+	),
 	size: (
 		0: 0,
 		n5: -2 * $basicSizeMultiplier,
@@ -80,7 +119,7 @@ $units: (
 		2: 1.35,
 		3: 1.6,
 		4: 1.8,
-		5: 2.5
+		5: 2.5,
 	),
 	opacity: (
 		0: 0,
@@ -95,7 +134,7 @@ $units: (
 		7: 0.75,
 		8: 0.9,
 		9: 0.975,
-		none: 1,
+		10: 1,
 	),
 	percent-10: (
 		0: 0%,
@@ -247,22 +286,22 @@ $units: (
 		xbold: 900,
 	),
 	font-size: (
-		0:      ms(0),
-		1:      ms(1),
-		2:      ms(2),
-		3:      ms(3),
-		4:      ms(4),
-		5:      ms(5),
-		6:      ms(6),
-		7:      ms(7),
-		8:      ms(8),
-		9:      ms(9),
-        10:         ms(10),
-        n1:         ms(-1),
-        n2:         ms(-2),
-        n3:         ms(-3),
-        n4:         ms(-4),
-        n5:         ms(-5),
+		0: ms(0),
+		1: ms(1),
+		2: ms(2),
+		3: ms(3),
+		4: ms(4),
+		5: ms(5),
+		6: ms(6),
+		7: ms(7),
+		8: ms(8),
+		9: ms(9),
+		10: ms(10),
+		n1: ms(-1),
+		n2: ms(-2),
+		n3: ms(-3),
+		n4: ms(-4),
+		n5: ms(-5),
 	),
 	display: (
 		block: block,
@@ -327,28 +366,28 @@ $units: (
 		5: 1rem,
 	),
 	font-family: (
-		accent: #{"Roboto Slab",
-		"Times New Roman",
-		"Lucida Bright",
+		accent: #{'Roboto Slab',
+		'Times New Roman',
+		'Lucida Bright',
 		Georgia,
 		serif},
-		display: #{"Maven Pro",
-		"Open Sans",
-		"Helvetica Neue",
-		"Helvetica",
+		display: #{'Maven Pro',
+		'Open Sans',
+		'Helvetica Neue',
+		'Helvetica',
 		Helvetica,
 		Arial,
 		sans-serif},
-		copy: #{"Open Sans",
-		"Helvetica Neue",
-		"Helvetica",
+		copy: #{'Open Sans',
+		'Helvetica Neue',
+		'Helvetica',
 		Helvetica,
 		Arial,
 		sans-serif},
-		ui: #{"Open Sans",
+		ui: #{'Open Sans',
 		-apple-system,
 		BlinkMacSystemFont,
-		"Segoe UI",
+		'Segoe UI',
 		Roboto,
 		Helvetica,
 		Arial,
@@ -357,23 +396,23 @@ $units: (
 		Menlo,
 		Monaco,
 		Consolas,
-		"Liberation Mono",
-		"Courier New",
+		'Liberation Mono',
+		'Courier New',
 		monospace},
 	),
 	grid: (
-		1: math.div(1,12) * 100%,
-		2: math.div(1,6)  * 100%,
-		3: math.div(1,4) * 100%,
-		4: math.div(1,3)  * 100%,
-		5: math.div(5,12) * 100%,
-		6: math.div(1,2) * 100%,
-		7: math.div(7,12) * 100%,
-		8: math.div(2,3) * 100%,
-		9: math.div(3,4) * 100%,
-		10:math.div(5,6) * 100%,
-		11:math.div(1,12) * 100%,
-		12:math.div(1,12) * 100%,
+		1: math.div(1, 12) * 100%,
+		2: math.div(1, 6) * 100%,
+		3: math.div(1, 4) * 100%,
+		4: math.div(1, 3) * 100%,
+		5: math.div(5, 12) * 100%,
+		6: math.div(1, 2) * 100%,
+		7: math.div(7, 12) * 100%,
+		8: math.div(2, 3) * 100%,
+		9: math.div(3, 4) * 100%,
+		10: math.div(5, 6) * 100%,
+		11: math.div(1, 12) * 100%,
+		12: math.div(1, 12) * 100%,
 	),
 	max-width: (
 		0: 0,
@@ -446,30 +485,51 @@ $units: (
 		5: 9999,
 	),
 	shadow: (
-		0: make-shadow(3, "drop", #000, 0.4),
-		1: make-shadow(1, "drop", #000, 0.1),
-		2: make-shadow(2, "drop", #000, 0.2),
-		3: make-shadow(3, "drop", #000, 0.3),
-		4: make-shadow(3.5, "drop", #000, 0.5),
-		5: make-shadow(4, "drop", #000, 0.65),
-		n1: make-shadow(1, "inset", #000, 0.1),
-		n2: make-shadow(2, "inset", #000, 0.2),
-		n3: make-shadow(3, "inset", #000, 0.3),
-		n4: make-shadow(3.5, "inset", #000, 0.5),
-		n5: make-shadow(4, "inset", #000, 0.65),
+		0: helper.make-shadow(3, 'drop', #000, 0.4),
+		1: helper.make-shadow(1, 'drop', #000, 0.1),
+		2: helper.make-shadow(2, 'drop', #000, 0.2),
+		3: helper.make-shadow(3, 'drop', #000, 0.3),
+		4: helper.make-shadow(3.5, 'drop', #000, 0.5),
+		5: helper.make-shadow(4, 'drop', #000, 0.65),
+		n1: helper.make-shadow(1, 'inset', #000, 0.1),
+		n2: helper.make-shadow(2, 'inset', #000, 0.2),
+		n3: helper.make-shadow(3, 'inset', #000, 0.3),
+		n4: helper.make-shadow(3.5, 'inset', #000, 0.5),
+		n5: helper.make-shadow(4, 'inset', #000, 0.65),
 	),
 	rich-shadow: (
 		emboss-light:
-			"inset 1px 1px 2px 0px rgba(0,0,0,0.06), inset 2px 2px 3px 0px rgba(18, 56, 136, 0.045), inset -2px -2px 3px 0px rgba(145,112,19,0.045)",
+			'inset 1px 1px 2px 0px rgba(0,0,0,0.06), inset 2px 2px 3px 0px rgba(18, 56, 136, 0.045), inset -2px -2px 3px 0px rgba(145,112,19,0.045)',
 		emboss-bold:
-			"inset 2px 3px 10px 0px rgba(0,0,0,0.13), inset 4px 4px 13px 0px rgba(11,20,28,0.07), inset -2px -2px 9px 0px rgba(145,112,19,0.04), inset 2px 1px 5px 4px rgba(0,0,0,0.9)",
+			'inset 2px 3px 10px 0px rgba(0,0,0,0.13), inset 4px 4px 13px 0px rgba(11,20,28,0.07), inset -2px -2px 9px 0px rgba(145,112,19,0.04), inset 2px 1px 5px 4px rgba(0,0,0,0.9)',
 		bevel-light:
-			"-2px -2px 2px rgba(255, 255, 255, .05 ), -2px -2px 3px rgba(255, 255, 255, .14 ), 2px 3.5px 5.5px rgba(0, 0, 0, .07), 0 6.4px 9.1px rgba(0, 0, 0, .02), 0 16px 9px rgb(0, 0, 0, .02)",
+			'-2px -2px 2px rgba(255, 255, 255, .05 ), -2px -2px 3px rgba(255, 255, 255, .14 ), 2px 3.5px 5.5px rgba(0, 0, 0, .07), 0 6.4px 9.1px rgba(0, 0, 0, .02), 0 16px 9px rgb(0, 0, 0, .02)',
 		bevel-bold:
-			"-2px -2px 4px hsla(0, 0%, 82.4%, 0.05), -2px -2px 3px hsla(0, 0%, 46.7%, 0.07), 1px 2.5px 4.5px rgba(0, 0, 0, 0.4), 0 6.4px 12.1px rgba(0, 0, 0, 0.14), 0 16px 19px rgba(0,0,0,.07)",
-		overlap-light:
-			"0 1px 10px hsla(0, 0%, 0%, 0.05), 0 2px 4px rgba(0,0,0,.3), 1px 5px 5px rgba(0,0,0,.01)",
+			'-2px -2px 4px hsla(0, 0%, 82.4%, 0.05), -2px -2px 3px hsla(0, 0%, 46.7%, 0.07), 1px 2.5px 4.5px rgba(0, 0, 0, 0.4), 0 6.4px 12.1px rgba(0, 0, 0, 0.14), 0 16px 19px rgba(0,0,0,.07)',
+		overlap-light: '0 1px 10px hsla(0, 0%, 0%, 0.05), 0 2px 4px rgba(0,0,0,.3), 1px 5px 5px rgba(0,0,0,.01)',
 		overlap-bold:
-			"-1px -2px 4px rgba(0,0,0,.08), 0 1px 10px hsla(0, 0%, 0%, 0.06), 0 3px 4px rgba(0,0,0,.5), 1px 5px 5px rgba(0,0,0,.03)",
+			'-1px -2px 4px rgba(0,0,0,.08), 0 1px 10px hsla(0, 0%, 0%, 0.06), 0 3px 4px rgba(0,0,0,.5), 1px 5px 5px rgba(0,0,0,.03)',
+	),
+	flex-direction: (
+		row: row,
+		column: column,
+		row-reverse: row-reverse,
+		column-reverse: column-reverse,
+		inherit: inherit,
+	),
+	justify-content: (
+		flex-start: flex-start,
+		flex-end: flex-end,
+		center: center,
+		space-between: space-between,
+		space-around: space-around,
+		space-evenly: space-evenly,
+	),
+	align-items: (
+		stretch: stretch,
+		center: center,
+		start: flex-start,
+		end: flex-end,
+		baseline: baseline,
 	),
 );
